--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="mask-icon" href="assets/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
-</head>head>
+</head>
 	<body  style = "margin:0">
 		<div class="html" lang="en" style="overflow-x:visible;
 overflow-y:visible;
