--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ box-sizing:border-box;
 									<section style="box-sizing:border-box;display:flex;justify-content:center;outline-color:rgb(0, 0, 0);outline-style:none;outline-width:0px;padding-bottom:100px;padding-left:0px;padding-right:0px;padding-top:100px;position:relative;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);">
 										<div style="min-height:509px;box-sizing:border-box;display:flex;height:100%;left:0px;outline-color:rgb(0, 0, 0);outline-style:none;outline-width:0px;position:absolute;right:0px;top:185px;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);width:100%;">
 											<video autoplay="" loop="" muted="" playsinline="" preload="auto" style="box-sizing:border-box;margin-bottom:auto;margin-left:auto;margin-right:auto;margin-top:auto;max-width:1640px;object-fit:contain;outline-color:rgb(0, 0, 0);outline-style:none;outline-width:0px;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);width:100%;">
-												<source src="putler.mp4" type="video/mp4" style="box-sizing:border-box;outline-color:rgb(0, 0, 0);outline-style:none;outline-width:0px;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);">
-													<source src="putler.mp4" type="video/webm" style="box-sizing:border-box;outline-color:rgb(0, 0, 0);outline-style:none;outline-width:0px;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);">
+												<source src="assets/putler.mp4" type="video/mp4" style="box-sizing:border-box;outline-color:rgb(0, 0, 0);outline-style:none;outline-width:0px;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);">
+													<source src="assets/putler.mp4" type="video/webm" style="box-sizing:border-box;outline-color:rgb(0, 0, 0);outline-style:none;outline-width:0px;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);">
 													</video>
 												</div>
 												<div style="z-index:5;box-sizing:border-box;display:block;outline-color:rgb(0, 0, 0);outline-style:none;outline-width:0px;position:relative;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);">
